# jobcan-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/modules/: config.rs  credential.rs  error.rs  mod.rs  utils.rs
src/modules/core/: auth.rs  exec.rs  login.rs  mod.rs
