[package]
name = "jobcan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "0.9.0"
failure = "0.1.8"
image = "0.23.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.9.0"
dirs = "4.0.0"
